.metadata/.plugins/org.eclipse.cdt.ui/File_handling_vowels.build.log
09:09:43 **** Incremental Build of configuration Debug for project File_handling_vowels ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\File_handling_vowels.o" "..\\src\\File_handling_vowels.c" 
..\src\File_handling_vowels.c: In function 'main':
..\src\File_handling_vowels.c:17:2: error: expected declaration or statement at end of input
  z = ((x<<0) && (x<<1));
  ^
..\src\File_handling_vowels.c:15:15: warning: variable 'z' set but not used [-Wunused-but-set-variable]
  int x,y; int z;
               ^
..\src\File_handling_vowels.c:15:8: warning: variable 'y' set but not used [-Wunused-but-set-variable]
  int x,y; int z;
        ^
..\src\File_handling_vowels.c:17:2: warning: control reaches end of non-void function [-Wreturn-type]
  z = ((x<<0) && (x<<1));
  ^

09:09:43 Build Finished (took 138ms)

